--- a/package.json
+++ b/package.json
@@ -14,6 +14,8 @@
     "@types/bcrypt": "^6.0.0",
     "@types/cors": "^2.8.19",
     "@types/express": "^5.0.3",
+    "@types/jsonwebtoken": "^9.0.10",
+    "@types/ms": "^2.1.0",
     "@types/node": "^24.4.0",
     "prisma": "^6.16.1",
     "ts-node-dev": "^2.0.0",
@@ -24,8 +26,10 @@
     "@prisma/client": "^6.16.1",
     "bcrypt": "^6.0.0",
     "cors": "^2.8.5",
+    "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
+    "jsonwebtoken": "^9.0.2",
     "zod": "^4.1.9"
   }
 }
