--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ms": "^2.1.0",
     "@types/node": "^24.4.0",
+    "@types/nodemailer": "^7.0.1",
     "prisma": "^6.16.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
@@ -32,6 +33,7 @@
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "nodemailer": "^7.0.6",
     "zod": "^4.1.9"
   }
 }
