--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "@types/express": "^5.0.3",
     "@types/jsonwebtoken": "^9.0.10",
     "@types/ms": "^2.1.0",
+    "@types/multer": "^2.0.0",
     "@types/node": "^24.4.0",
     "@types/nodemailer": "^7.0.1",
     "prisma": "^6.16.1",
@@ -27,12 +28,14 @@
   "dependencies": {
     "@prisma/client": "^6.16.1",
     "bcrypt": "^6.0.0",
+    "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
     "dotenv": "^17.2.2",
     "express": "^5.1.0",
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
     "zod": "^4.1.9"
   }
