--- a/package.json
+++ b/package.json
@@ -4,10 +4,10 @@
   "description": "",
   "license": "ISC",
   "author": "",
-  "type": "commonjs",
+  "type": "module",
   "main": "index.js",
   "scripts": {
-    "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
+    "dev": "tsx watch src/server.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "devDependencies": {
@@ -19,7 +19,8 @@
     "@types/ms": "^2.1.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.4.0",
-    "@types/nodemailer": "^7.0.1",
+    "@types/nodemailer": "^7.0.6",
+    "nodemon": "^3.1.10",
     "prisma": "^6.16.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
@@ -27,6 +28,7 @@
   },
   "dependencies": {
     "@prisma/client": "^6.16.1",
+    "@types/uuid": "^10.0.0",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
@@ -38,6 +40,7 @@
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
     "nodemailer": "^7.0.6",
+    "uuid": "^13.0.0",
     "zod": "^4.1.9"
   }
 }
