--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,44 +2,35 @@
   // Visit https://aka.ms/tsconfig to read more about this file
   "compilerOptions": {
     // File Layout
-     "rootDir": "./src",
-     "outDir": "./dist",
+      "rootDir": "./src",
+      "outDir": "./dist",
 
     // Environment Settings
-    // See also https://aka.ms/tsconfig/module
-    "module": "commonjs",
-    "target": "es2016",
-    "types": ["node"],
-    // For nodejs:
-     "lib": ["esnext"],
-    // "types": ["node"],
-    // and npm install -D @types/node
+    // *** KEY CHANGE 1: Use NodeNext for ES Modules in Node.js ***
+    "module": "NodeNext",
+    "moduleResolution": "NodeNext",
+    "target": "ES2022", // Updated for better compatibility with modern Node.js
+
+      "types": ["node"],
+      "lib": ["esnext"],
 
     // Other Outputs
-    "sourceMap": true,
-    "declaration": true,
-    "declarationMap": true,
+      "sourceMap": true,
+      "declaration": true,
+      "declarationMap": true,
 
     // Stricter Typechecking Options
-    "noUncheckedIndexedAccess": true,
-    "exactOptionalPropertyTypes": true,
-
-    // Style Options
-    // "noImplicitReturns": true,
-    // "noImplicitOverride": true,
-    // "noUnusedLocals": true,
-    // "noUnusedParameters": true,
-    // "noFallthroughCasesInSwitch": true,
-    // "noPropertyAccessFromIndexSignature": true,
+      "noUncheckedIndexedAccess": true,
+      "exactOptionalPropertyTypes": true,
 
     // Recommended Options
-    "strict": true,
-    "jsx": "react-jsx",
-    "esModuleInterop": true,
-    "verbatimModuleSyntax": false,
-    "isolatedModules": true,
-    "noUncheckedSideEffectImports": true,
-    "moduleDetection": "force",
-    "skipLibCheck": true,
+      "strict": true,
+      "jsx": "react-jsx",
+      "esModuleInterop": true,
+      "verbatimModuleSyntax": false,
+      "isolatedModules": true,
+      "noUncheckedSideEffectImports": true,
+      "moduleDetection": "force",
+      "skipLibCheck": true,
   }
 }
