--- a/package.json
+++ b/package.json
@@ -19,12 +19,15 @@
     "@types/ms": "^2.1.0",
     "@types/multer": "^2.0.0",
     "@types/node": "^24.4.0",
-    "@types/nodemailer": "^7.0.6",
+    "@types/nodemailer": "^6.4.0",
     "nodemon": "^3.1.10",
     "prisma": "^6.16.1",
     "ts-node-dev": "^2.0.0",
     "tsx": "^4.20.5",
     "typescript": "^5.9.2"
+  },
+  "resolutions": {
+    "@types/nodemailer": "6.4.0"
   },
   "dependencies": {
     "@prisma/client": "^6.16.1",
@@ -39,7 +42,8 @@
     "http-status": "^2.1.0",
     "jsonwebtoken": "^9.0.2",
     "multer": "^2.0.2",
-    "nodemailer": "^7.0.6",
+    "node-cron": "^4.2.1",
+    "nodemailer": "^7.0.9",
     "uuid": "^13.0.0",
     "zod": "^4.1.9"
   }
