--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
   "dependencies": {
     "@prisma/client": "^6.16.1",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
@@ -44,6 +45,7 @@
     "multer": "^2.0.2",
     "node-cron": "^4.2.1",
     "nodemailer": "^7.0.9",
+    "sslcommerz-lts": "^1.2.0",
     "uuid": "^13.0.0",
     "zod": "^4.1.9"
   }
