--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
   "main": "index.js",
   "scripts": {
     "dev": "ts-node-dev --respawn --transpile-only src/server.ts",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "seed": "ts-node-dev --respawn --transpile-only prisma/seed.ts"
   },
   "devDependencies": {
     "@types/bcrypt": "^6.0.0",
@@ -34,6 +34,7 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.12.2",
     "bcrypt": "^6.0.0",
+    "bcryptjs": "^3.0.2",
     "cloudinary": "^2.7.0",
     "cookie-parser": "^1.4.7",
     "cors": "^2.8.5",
